--- a/HJ/Algorithm/btree/Btree.ipynb
+++ b/HJ/Algorithm/btree/Btree.ipynb
@@ -2,19 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start\n",
-      "level 0 , length : 1  : 2 level 1 , length : 2  : 0 1 level 1 , length : 2  : 3 4 "
+      "Start\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import random\n",
     "# Node\n",
     "class Node:\n",
     "    def __init__(self, isleaf=False):\n",
@@ -26,9 +36,9 @@
     "\n",
     "class BTree:\n",
     "    def __init__(self, m):\n",
-    "        self.m=m #차수\n",
-    "        self.root=None\n",
-    "        # self.root=Node(True)\n",
+    "        self.m=m #차수 -> m개의 child를 가질 수 있음\n",
+    "        self.root=Node(True)\n",
+    "        # self.root=None\n",
     "\n",
     "    def printTree(self, node ,level=0):\n",
     "        print(f'level {level} , length : {len(node.keys)} ', end=\" : \")\n",
@@ -39,81 +49,91 @@
     "            for i in node.child: \n",
     "                self.printTree(i, level)\n",
     "        \n",
+    "    def splitNode(self,p_pos,p_node,node):\n",
+    "        pass\n",
+    "\n",
     "    # k : Key \n",
-    "    def insert(self,k):\n",
-    "        root=self.root\n",
-    "        if root:\n",
-    "            self.insert_non_full(root,k)\n",
-    "        else:\n",
-    "            if len(root.keys) >= self.m-1:\n",
-    "                new_root=Node(False)\n",
-    "                i = len(root.keys)-1\n",
-    "                root.append([None,None])\n",
-    "                while i>=0 and k[0]<root.keys[i][0]:\n",
-    "                    root.keys[i+1] = root.keys[i]\n",
-    "                    i-=1\n",
-    "                root.keys[i+1]=k\n",
-    "                \n",
-    "                \n",
-    "\n",
-    "        # if len(root.keys) == (2*self.m)-1 : #Maximum number of key\n",
-    "        #     temp=Node()\n",
-    "        #     self.root=temp\n",
-    "        #     temp.child.insert(0,root)\n",
-    "        #     self.split_child(temp,0)\n",
-    "        #     self.insert_non_full(temp,k)\n",
-    "        # else: # Enough Num of key\n",
-    "        #     self.insert_non_full(root,k)\n",
-    "\n",
-    "    def insert_non_full(self, node, k):\n",
-    "        \"\"\" \n",
-    "        Insert Key k at a not-full node \n",
-    "        K : [key, value]\n",
+    "    def insert_node(self,p_pos,p_node,node,key):\n",
+    "        \"\"\" 데이터 추가하는것, Root부터 시작해서 내려가도록 Trigger가 발동되며, \n",
+    "        현재의 노드(node)가 leaf가 아닐경우, 재귀적으로 child를 내려감. \n",
+    "        리프에서의 삽입이 이뤄지고나면, 그대로 자기자신만 반환하고, \n",
+    "        Leaf에서의 삽입이 OverFlow가 일어날경우 중간key와 자기자신을 반환\n",
+    "        삽입을 하고난 이후, 반환되는 key가 있다면, 해당 child에서 OverFlow가 난것이므로, 관련연산 진행\n",
     "        \"\"\"\n",
-    "        i = len(node.keys)-1\n",
-    "        if node.isleaf: \n",
-    "            # 리프노드\n",
-    "            node.keys.append([None,None])\n",
-    "            while i>=0 and k[0] < node.keys[i][0]:\n",
-    "                #한칸씩 뒤로 밀기 (i는 끝에서부터 하나씩 작아직)\n",
-    "                node.keys[i+1]=node.keys[i]\n",
-    "                i-=1\n",
-    "            #while문이 끝날땐, k의 값이 node.keys[i][0]보다 큰상태 또는 -1일테니 그 바로 뒤에 삽입\n",
-    "            node.keys[i+1]=k\n",
-    "        else: # Leaf가 아닌노드\n",
-    "            while i>=0 and k[0]<node.keys[i][0]:\n",
-    "                i-=1\n",
-    "            i+=1\n",
-    "            #위와 동일하게 위치찾기.\n",
-    "            #만약 해당 자식의 키수가 m개 초과시 -> 스플릿\n",
-    "            # if len(node.child[i].keys)==(2*self.m)-1:\n",
-    "            if len(node.child[i].keys)>=self.m:\n",
-    "                self.split_child(node,i)\n",
-    "                if k[0] > node.keys[i][0]:\n",
-    "                    i+=1\n",
-    "                self.insert_non_full(node.child[i],k)\n",
-    "    \n",
-    "    # Split Child\n",
-    "    def split_child(self, node, i):\n",
-    "        m = self.m\n",
-    "        node_child = node.child[i]\n",
-    "        temp = Node(node_child.isleaf)\n",
-    "        node.child.insert(i+1, temp)\n",
-    "        node.keys.insert(i,node_child.keys[m-1])\n",
-    "        temp.keys = node_child.keys[m:(2*m)-1]\n",
-    "        node_child.keys = node_child.keys[:m-1]\n",
+    "        pos=0\n",
+    "        while pos < len(node.keys):\n",
+    "            if key[0]==node.keys[pos]:\n",
+    "                #Duplicate\n",
+    "                print(f\"Duplicates key {key}\")\n",
+    "                return node, None \n",
+    "            elif key[0]>node.keys[pos]: break\n",
+    "            pos+=1\n",
+    "        # Position 찾기 완료\n",
+    "        if node.isleaf: # Leaf라면?? -> Leaf에서의 삽입 로직\n",
+    "            node.keys[i+1] = key\n",
+    "            if len(node.keys)>=self.m : \n",
+    "                return node, node.keys[self.m//2]\n",
+    "            else: return node, None\n",
+    "        else: #Leaf가 아니라면?\n",
+    "            node.child[pos], child_mid_key = self.insert_node(pos,node,node.child[pos],key)\n",
+    "            if len(node.keys) == self.m:\n",
+    "                node = splitNode(p_pos,p_node,node)\n",
+    "                \n",
+    "                \n",
     "\n",
-    "        if not node_child.isleaf:\n",
-    "            temp.child=node_child.child[m:2*m]\n",
-    "            node_child.child = node_child.child[:m-1]\n",
+    "        \n",
+    "    # def insert_non_full(self, node, k):\n",
+    "    #     \"\"\" \n",
+    "    #     Insert Key k at a not-full node \n",
+    "    #     K : [key, value]\n",
+    "    #     \"\"\"\n",
+    "    #     i = len(node.keys)-1\n",
+    "    #     if node.isleaf: \n",
+    "    #         # 리프노드\n",
+    "    #         node.keys.append([None,None])\n",
+    "    #         while i>=0 and k[0] < node.keys[i][0]:\n",
+    "    #             #한칸씩 뒤로 밀기 (i는 끝에서부터 하나씩 작아직)\n",
+    "    #             node.keys[i+1]=node.keys[i]\n",
+    "    #             i-=1\n",
+    "    #         #while문이 끝날땐, k의 값이 node.keys[i][0]보다 큰상태 또는 -1일테니 그 바로 뒤에 삽입\n",
+    "    #         node.keys[i+1]=k\n",
+    "    #     else: # Leaf가 아닌노드\n",
+    "    #         while i>=0 and k[0]<node.keys[i][0]:\n",
+    "    #             i-=1\n",
+    "    #         i+=1\n",
+    "    #         #위와 동일하게 위치찾기.\n",
+    "    #         #만약 해당 자식의 키수가 m개 초과시 -> 스플릿\n",
+    "    #         # if len(node.child[i].keys)==(2*self.m)-1:\n",
+    "    #         if len(node.child[i].keys)>=self.m:\n",
+    "    #             self.split_child(node,i)\n",
+    "    #             if k[0] > node.keys[i][0]:\n",
+    "    #                 i+=1\n",
+    "    #             self.insert_non_full(node.child[i],k)\n",
+    "    \n",
+    "    # # Split Child\n",
+    "    # def split_child(self, node, i):\n",
+    "    #     m = self.m\n",
+    "    #     node_child = node.child[i]\n",
+    "    #     temp = Node(node_child.isleaf)\n",
+    "    #     node.child.insert(i+1, temp)\n",
+    "    #     node.keys.insert(i,node_child.keys[m-1])\n",
+    "    #     temp.keys = node_child.keys[m:(2*m)-1]\n",
+    "    #     node_child.keys = node_child.keys[:m-1]\n",
+    "\n",
+    "    #     if not node_child.isleaf:\n",
+    "    #         temp.child=node_child.child[m:2*m]\n",
+    "    #         node_child.child = node_child.child[:m-1]\n",
     "\n",
     "\n",
     "# if __name__==\"__main__\":\n",
     "print(\"Start\")\n",
     "bt = BTree(3)\n",
     "# kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n",
-    "for i in range(10): bt.insert([i,i*2])\n",
-    "bt.printTree(bt.root)\n"
+    "# for i in random.shuffle([i for i in range(10)]): \n",
+    "\n",
+    "rand=random.randint(1,50)\n",
+    "#     bt.insert([i,i*2])\n",
+    "# bt.printTree(bt.root)\n"
    ]
   },
   {
@@ -163,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
