--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -1866,6 +1866,29 @@
     "    return len(arr)\n",
     "solution1(citations)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.20000000000000018"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def floor(n):\n",
+    "    if n%1==n//1 : return n\n",
+    "    else: return n%1\n",
+    "floor(2.2)"
+   ]
   }
  ],
  "metadata": {
