--- a/HJ/Algorithm/btree/Btree.ipynb
+++ b/HJ/Algorithm/btree/Btree.ipynb
@@ -66,16 +66,40 @@
     "                #Duplicate\n",
     "                print(f\"Duplicates key {key}\")\n",
     "                return node, None \n",
-    "            elif key[0]>node.keys[pos]: break\n",
+    "            elif key[0]<node.keys[pos]: break\n",
     "            pos+=1\n",
     "        # Position 찾기 완료\n",
     "        if node.isleaf: # Leaf라면?? -> Leaf에서의 삽입 로직\n",
-    "            node.keys[i+1] = key\n",
-    "            if len(node.keys)>=self.m : \n",
-    "                return node, node.keys[self.m//2]\n",
+    "            temp = node.keys[pos:]\n",
+    "            node.keys[pos+1:] = temp\n",
+    "            node.keys[pos] = key\n",
+    "            if len(node.keys) >= self.m : # 오버플로 발생?\n",
+    "                return node, node.keys[(self.m//2)+1]\n",
     "            else: return node, None\n",
     "        else: #Leaf가 아니라면?\n",
     "            node.child[pos], child_mid_key = self.insert_node(pos,node,node.child[pos],key)\n",
+    "            if child_mid_key: # Child에서 OverFlow발생\n",
+    "               # Parent로 올라가\n",
+    "                temp=node.keys[pos:]\n",
+    "                node.keys[pos+1:] = temp\n",
+    "                # node.keys[pos] = node.child.keys[child_mid_key]\n",
+    "                node.keys[pos] = child_mid_key\n",
+    "                node.child[pos+2:] = node.child[pos+1:]\n",
+    "                \n",
+    "                # child split\n",
+    "                c_node=node.child[pos]\n",
+    "                temp = Node(c_node.isleaf) # 오른쪽으로 추가될 노드\n",
+    "                temp.keys=c_node.keys[m//2+1:]\n",
+    "                c_node.keys=c_node.keys[:m//2+1]\n",
+    "                #TODO : 확인필요\n",
+    "                node.child[pos+1] = temp\n",
+    "                if not c_node.isleaf:\n",
+    "                    temp.child = c_node.child[m//2]\n",
+    "\n",
+    "            else:# Overflow X \n",
+    "                pass\n",
+    "            \n",
+    "            # 자기자신 OverFlow?\n",
     "            if len(node.keys) == self.m:\n",
     "                node = splitNode(p_pos,p_node,node)\n",
     "                \n",
