--- a/HJ/Algorithm/btree/Btree.ipynb
+++ b/HJ/Algorithm/btree/Btree.ipynb
@@ -2,25 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[0,1,2,3,4,5]\n",
+    "a[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start\n"
+      "Start\n",
+      "[1, 11] []\n",
+      "[2, 11] [[1, 11]]\n",
+      "[3, 11] [[1, 11], [2, 11]]\n",
+      "[4, 11] [[1, 11], [2, 11], [3, 11]]\n",
+      "0\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "46"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'int' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-d9263dd701b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 108\u001b[0;31m \u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-40-d9263dd701b7>\u001b[0m in \u001b[0;36minsert_node\u001b[0;34m(self, node, key)\u001b[0m\n\u001b[1;32m     44\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Duplicates key {key}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m             \u001b[0;32melif\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m             \u001b[0mpos\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;31m# Position 찾기 완료\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'list'"
+     ]
     }
    ],
    "source": [
@@ -53,15 +81,18 @@
     "        pass\n",
     "\n",
     "    # k : Key \n",
-    "    def insert_node(self,p_pos,p_node,node,key):\n",
+    "    # def insert_node(self,p_pos,p_node,node,key):\n",
+    "    def insert_node(self,node,key):\n",
     "        \"\"\" 데이터 추가하는것, Root부터 시작해서 내려가도록 Trigger가 발동되며, \n",
     "        현재의 노드(node)가 leaf가 아닐경우, 재귀적으로 child를 내려감. \n",
     "        리프에서의 삽입이 이뤄지고나면, 그대로 자기자신만 반환하고, \n",
     "        Leaf에서의 삽입이 OverFlow가 일어날경우 중간key와 자기자신을 반환\n",
     "        삽입을 하고난 이후, 반환되는 key가 있다면, 해당 child에서 OverFlow가 난것이므로, 관련연산 진행\n",
     "        \"\"\"\n",
+    "        print(key,node)\n",
     "        pos=0\n",
-    "        while pos < len(node.keys):\n",
+    "        while pos < len(node.keys)-2:\n",
+    "            print(pos)\n",
     "            if key[0]==node.keys[pos]:\n",
     "                #Duplicate\n",
     "                print(f\"Duplicates key {key}\")\n",
@@ -69,115 +100,86 @@
     "            elif key[0]<node.keys[pos]: break\n",
     "            pos+=1\n",
     "        # Position 찾기 완료\n",
+    "        # print(pos)\n",
     "        if node.isleaf: # Leaf라면?? -> Leaf에서의 삽입 로직\n",
-    "            temp = node.keys[pos:]\n",
-    "            node.keys[pos+1:] = temp\n",
-    "            node.keys[pos] = key\n",
+    "            i=len(node.keys)-1\n",
+    "            node.keys.append([1e9,None])\n",
+    "            while i>=0 and key[0]<node.keys[i][0]:\n",
+    "                node.keys[i+1]=node.keys[i]\n",
+    "                i-=1\n",
+    "            node.keys[i+1]=key\n",
     "            if len(node.keys) >= self.m : # 오버플로 발생?\n",
-    "                return node, node.keys[(self.m//2)+1]\n",
+    "                return node, node.keys[(self.m//2)]\n",
     "            else: return node, None\n",
     "        else: #Leaf가 아니라면?\n",
-    "            node.child[pos], child_mid_key = self.insert_node(pos,node,node.child[pos],key)\n",
-    "            if child_mid_key: # Child에서 OverFlow발생\n",
-    "               # Parent로 올라가\n",
+    "            node.child[pos], child_mid_value = self.insert_node(node.child[pos],key)\n",
+    "            if child_mid_value: # Child에서 OverFlow발생 -> 자기에 추가시켜줘야해\n",
+    "                # Parent로 올라가\n",
     "                temp=node.keys[pos:]\n",
     "                node.keys[pos+1:] = temp\n",
-    "                # node.keys[pos] = node.child.keys[child_mid_key]\n",
-    "                node.keys[pos] = child_mid_key\n",
+    "                # node.keys[pos] = node.child.keys[child_mid_value]\n",
+    "                node.keys[pos] = child_mid_value\n",
     "                node.child[pos+2:] = node.child[pos+1:]\n",
     "                \n",
     "                # child split\n",
     "                c_node=node.child[pos]\n",
     "                temp = Node(c_node.isleaf) # 오른쪽으로 추가될 노드\n",
-    "                temp.keys=c_node.keys[m//2+1:]\n",
-    "                c_node.keys=c_node.keys[:m//2+1]\n",
-    "                #TODO : 확인필요\n",
+    "                temp.keys = c_node.keys[self.m//2+1:] ## m//2는 부모로 올라갔으므로\n",
+    "                c_node.keys=c_node.keys[:self.m//2]\n",
+    "                \n",
+    "                ## Child 의 child까지 정리\n",
     "                node.child[pos+1] = temp\n",
     "                if not c_node.isleaf:\n",
-    "                    temp.child = c_node.child[m//2]\n",
-    "\n",
-    "            else:# Overflow X \n",
-    "                pass\n",
+    "                    temp.child = c_node.child[self.m//2+1:]\n",
+    "                    c_node.child = c_node.child[:self.m//2+1]\n",
+    "            \n",
+    "            if len(node.keys) >= self.m : # 오버플로 발생?\n",
+    "                return node, node.keys[(self.m//2)]\n",
+    "            else:# Child Overflow X \n",
+    "                return node , None\n",
     "            \n",
     "            # 자기자신 OverFlow?\n",
-    "            if len(node.keys) == self.m:\n",
-    "                node = splitNode(p_pos,p_node,node)\n",
+    "            # if len(node.keys) == self.m:\n",
+    "            #     node = splitNode(p_pos,p_node,node)\n",
     "                \n",
     "                \n",
     "\n",
     "        \n",
-    "    # def insert_non_full(self, node, k):\n",
-    "    #     \"\"\" \n",
-    "    #     Insert Key k at a not-full node \n",
-    "    #     K : [key, value]\n",
-    "    #     \"\"\"\n",
-    "    #     i = len(node.keys)-1\n",
-    "    #     if node.isleaf: \n",
-    "    #         # 리프노드\n",
-    "    #         node.keys.append([None,None])\n",
-    "    #         while i>=0 and k[0] < node.keys[i][0]:\n",
-    "    #             #한칸씩 뒤로 밀기 (i는 끝에서부터 하나씩 작아직)\n",
-    "    #             node.keys[i+1]=node.keys[i]\n",
-    "    #             i-=1\n",
-    "    #         #while문이 끝날땐, k의 값이 node.keys[i][0]보다 큰상태 또는 -1일테니 그 바로 뒤에 삽입\n",
-    "    #         node.keys[i+1]=k\n",
-    "    #     else: # Leaf가 아닌노드\n",
-    "    #         while i>=0 and k[0]<node.keys[i][0]:\n",
-    "    #             i-=1\n",
-    "    #         i+=1\n",
-    "    #         #위와 동일하게 위치찾기.\n",
-    "    #         #만약 해당 자식의 키수가 m개 초과시 -> 스플릿\n",
-    "    #         # if len(node.child[i].keys)==(2*self.m)-1:\n",
-    "    #         if len(node.child[i].keys)>=self.m:\n",
-    "    #             self.split_child(node,i)\n",
-    "    #             if k[0] > node.keys[i][0]:\n",
-    "    #                 i+=1\n",
-    "    #             self.insert_non_full(node.child[i],k)\n",
-    "    \n",
-    "    # # Split Child\n",
-    "    # def split_child(self, node, i):\n",
-    "    #     m = self.m\n",
-    "    #     node_child = node.child[i]\n",
-    "    #     temp = Node(node_child.isleaf)\n",
-    "    #     node.child.insert(i+1, temp)\n",
-    "    #     node.keys.insert(i,node_child.keys[m-1])\n",
-    "    #     temp.keys = node_child.keys[m:(2*m)-1]\n",
-    "    #     node_child.keys = node_child.keys[:m-1]\n",
-    "\n",
-    "    #     if not node_child.isleaf:\n",
-    "    #         temp.child=node_child.child[m:2*m]\n",
-    "    #         node_child.child = node_child.child[:m-1]\n",
-    "\n",
     "\n",
     "# if __name__==\"__main__\":\n",
     "print(\"Start\")\n",
     "bt = BTree(3)\n",
-    "# kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n",
+    "kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n",
     "# for i in random.shuffle([i for i in range(10)]): \n",
     "\n",
-    "rand=random.randint(1,50)\n",
-    "#     bt.insert([i,i*2])\n",
-    "# bt.printTree(bt.root)\n"
+    "# rand=random.randint(1,50)\n",
+    "# for i in kvs:\n",
+    "#     bt.insert_node(bt.root,i)\n",
+    "# bt.printTree(bt.root)\n",
+    "bt.insert_node(bt.root,[1,11])\n",
+    "bt.insert_node(bt.root,[2,11])\n",
+    "bt.insert_node(bt.root,[3,11])\n",
+    "bt.insert_node(bt.root,[4,11])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[[1, 11], [4, 44]], [[6, 66], [7, 77]]]"
+       "[[1, 11], [2, 11], [3, 11]]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bt.root.child"
+    "bt.root"
    ]
   },
   {
