Insert Logic Finish

--- a/HJ/Algorithm/btree/Btree.ipynb
+++ b/HJ/Algorithm/btree/Btree.ipynb
@@ -23,7 +23,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, isleaf=False):\n",
+    "        self.isleaf=isleaf\n",
+    "        self.keys=[]\n",
+    "        self.child=[]\n",
+    "    def __repr__(self):\n",
+    "        return f'k:{self.keys}'\n",
+    "    def split(self):\n",
+    "        length = len(self.keys)\n",
+    "        temp = Node(self.isleaf)\n",
+    "        mid = self.keys[length//2]\n",
+    "        temp.keys = self.keys[length//2+1:]\n",
+    "        self.keys = self.keys[:length//2]\n",
+    "        if self.child:\n",
+    "            temp.child = self.child[length//2+1:]\n",
+    "            self.child = self.child[:length//2+1]\n",
+    "        return self,mid,temp\n",
+    "        \n",
+    "# nn=Node()\n",
+    "# nn.keys=[10,20,30,40,50]\n",
+    "# nn.child=[[1,2],[12,13],[22,23],[33,39],[45,49],[55,60]]\n",
+    "# ll,mid,rr=nn.split()\n",
+    "# ll,ll.child , rr, rr.child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -31,41 +62,59 @@
      "output_type": "stream",
      "text": [
       "Start\n",
-      "[1, 11] []\n",
-      "[2, 11] [[1, 11]]\n",
-      "[3, 11] [[1, 11], [2, 11]]\n",
-      "[4, 11] [[1, 11], [2, 11], [3, 11]]\n",
-      "0\n"
+      "[10, 11]  Node :  k:[] 0\n",
+      "[15, 11]  Node :  k:[[10, 11]] 1\n",
+      "[18, 11]  Node :  k:[[10, 11], [15, 11]] 2\n",
+      "[30, 11]  Node :  k:[[15, 11]] 1\n",
+      "[30, 11]  Node :  k:[[18, 11]] 1\n",
+      "[20, 11]  Node :  k:[[15, 11]] 1\n",
+      "[20, 11]  Node :  k:[[18, 11], [30, 11]] 1\n",
+      "[40, 11]  Node :  k:[[15, 11], [20, 11]] 2\n",
+      "[40, 11]  Node :  k:[[30, 11]] 1\n",
+      "[50, 11]  Node :  k:[[15, 11], [20, 11]] 2\n",
+      "[50, 11]  Node :  k:[[30, 11], [40, 11]] 2\n",
+      "[60, 11]  Node :  k:[[20, 11]] 1\n",
+      "[60, 11]  Node :  k:[[40, 11]] 1\n",
+      "[60, 11]  Node :  k:[[50, 11]] 1\n",
+      "[70, 11]  Node :  k:[[20, 11]] 1\n",
+      "[70, 11]  Node :  k:[[40, 11]] 1\n",
+      "[70, 11]  Node :  k:[[50, 11], [60, 11]] 2\n",
+      "[80, 11]  Node :  k:[[20, 11]] 1\n",
+      "[80, 11]  Node :  k:[[40, 11], [60, 11]] 2\n",
+      "[80, 11]  Node :  k:[[70, 11]] 1\n",
+      "[90, 11]  Node :  k:[[20, 11]] 1\n",
+      "[90, 11]  Node :  k:[[40, 11], [60, 11]] 2\n",
+      "[90, 11]  Node :  k:[[70, 11], [80, 11]] 2\n",
+      "[85, 11]  Node :  k:[[20, 11], [60, 11]] 2\n",
+      "[85, 11]  Node :  k:[[80, 11]] 1\n",
+      "[85, 11]  Node :  k:[[90, 11]] 0\n",
+      "[75, 11]  Node :  k:[[20, 11], [60, 11]] 2\n",
+      "[75, 11]  Node :  k:[[80, 11]] 0\n",
+      "[75, 11]  Node :  k:[[70, 11]] 1\n",
+      "[77, 11]  Node :  k:[[20, 11], [60, 11]] 2\n",
+      "[77, 11]  Node :  k:[[80, 11]] 0\n",
+      "[77, 11]  Node :  k:[[70, 11], [75, 11]] 2\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'int' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-d9263dd701b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 108\u001b[0;31m \u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-42-d9263dd701b7>\u001b[0m in \u001b[0;36minsert_node\u001b[0;34m(self, node, key)\u001b[0m\n\u001b[1;32m     44\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Duplicates key {key}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m             \u001b[0;32melif\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m             \u001b[0mpos\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;31m# Position 찾기 완료\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'list'"
-     ]
+     "data": {
+      "text/plain": [
+       "k:[[20, 11], [60, 11]]"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import random\n",
-    "# Node\n",
-    "class Node:\n",
-    "    def __init__(self, isleaf=False):\n",
-    "        self.isleaf=isleaf\n",
-    "        self.keys=[]\n",
-    "        self.child=[]\n",
-    "    def __repr__(self):\n",
-    "        return f'{self.keys}'\n",
     "\n",
     "class BTree:\n",
     "    def __init__(self, m):\n",
     "        self.m=m #차수 -> m개의 child를 가질 수 있음\n",
     "        self.root=Node(True)\n",
+    "        # self.root.isleaf = 'root'\n",
     "        # self.root=None\n",
     "\n",
     "    def printTree(self, node ,level=0):\n",
@@ -89,19 +138,19 @@
     "        Leaf에서의 삽입이 OverFlow가 일어날경우 중간key와 자기자신을 반환\n",
     "        삽입을 하고난 이후, 반환되는 key가 있다면, 해당 child에서 OverFlow가 난것이므로, 관련연산 진행\n",
     "        \"\"\"\n",
-    "        print(key,node)\n",
     "        pos=0\n",
-    "        while pos < len(node.keys)-2:\n",
-    "            print(pos)\n",
-    "            if key[0]==node.keys[pos]:\n",
+    "        while pos < len(node.keys):\n",
+    "            # print(pos)\n",
+    "            if key[0]==node.keys[pos][0]:\n",
     "                #Duplicate\n",
     "                print(f\"Duplicates key {key}\")\n",
     "                return node, None \n",
-    "            elif key[0]<node.keys[pos]: break\n",
+    "            elif key[0]<node.keys[pos][0]: break\n",
     "            pos+=1\n",
+    "        print(key,\" Node : \",node , pos)\n",
+    "        \n",
     "        # Position 찾기 완료\n",
-    "        # print(pos)\n",
-    "        if node.isleaf: # Leaf라면?? -> Leaf에서의 삽입 로직\n",
+    "        if node.isleaf==True : # Leaf라면?? -> Leaf에서의 삽입 로직\n",
     "            i=len(node.keys)-1\n",
     "            node.keys.append([1e9,None])\n",
     "            while i>=0 and key[0]<node.keys[i][0]:\n",
@@ -109,34 +158,76 @@
     "                i-=1\n",
     "            node.keys[i+1]=key\n",
     "            if len(node.keys) >= self.m : # 오버플로 발생?\n",
-    "                return node, node.keys[(self.m//2)]\n",
+    "                if node == self.root:\n",
+    "                    # print(\"Root OverFlow\")\n",
+    "                    ll,mid,rr=node.split()\n",
+    "                    self.root=Node(False)\n",
+    "                    self.root.keys.append(mid)\n",
+    "                    self.root.child.append(ll)\n",
+    "                    self.root.child.append(rr)\n",
+    "                    return self.root, None\n",
+    "                else:\n",
+    "                    # print(\"Leaf OVERFLOW\",node)\n",
+    "                    return node, node.keys[(self.m//2)]\n",
+    "\n",
     "            else: return node, None\n",
+    "        # elif node.isleaf == False: #Leaf가 아니라면?\n",
     "        else: #Leaf가 아니라면?\n",
-    "            node.child[pos], child_mid_value = self.insert_node(node.child[pos],key)\n",
-    "            if child_mid_value: # Child에서 OverFlow발생 -> 자기에 추가시켜줘야해\n",
-    "                # Parent로 올라가\n",
-    "                temp=node.keys[pos:]\n",
-    "                node.keys[pos+1:] = temp\n",
-    "                # node.keys[pos] = node.child.keys[child_mid_value]\n",
-    "                node.keys[pos] = child_mid_value\n",
-    "                node.child[pos+2:] = node.child[pos+1:]\n",
-    "                \n",
-    "                # child split\n",
-    "                c_node=node.child[pos]\n",
-    "                temp = Node(c_node.isleaf) # 오른쪽으로 추가될 노드\n",
-    "                temp.keys = c_node.keys[self.m//2+1:] ## m//2는 부모로 올라갔으므로\n",
-    "                c_node.keys=c_node.keys[:self.m//2]\n",
-    "                \n",
-    "                ## Child 의 child까지 정리\n",
-    "                node.child[pos+1] = temp\n",
-    "                if not c_node.isleaf:\n",
-    "                    temp.child = c_node.child[self.m//2+1:]\n",
-    "                    c_node.child = c_node.child[:self.m//2+1]\n",
+    "            node.child[pos], child_mid_kv = self.insert_node(node.child[pos],key)\n",
+    "            if child_mid_kv: # Child에서 OverFlow발생 -> 자기에 추가시켜줘야해\n",
+    "                ll,mid,rr=node.child[pos].split()\n",
+    "\n",
+    "                i=len(node.keys)-1\n",
+    "                node.keys.append([1e9,None])\n",
+    "                node.child.append([])\n",
+    "                while i>=0 and mid[0] < node.keys[i][0]:\n",
+    "                    node.keys[i+1]=node.keys[i]\n",
+    "                    node.child[i+2]=node.child[i+1]\n",
+    "                    i-=1\n",
+    "                node.keys[i+1]=mid\n",
+    "                # i=len(node.child)-1\n",
+    "                node.child[i+2]=rr\n",
+    "                if len(node.keys) >= self.m : # 오버플로 발생?\n",
+    "                    if node == self.root:\n",
+    "                        # print(\"Root OverFlow\")\n",
+    "                        ll,mid,rr=node.split()\n",
+    "                        self.root=Node(False)\n",
+    "                        self.root.keys.append(mid)\n",
+    "                        self.root.child.append(ll)\n",
+    "                        self.root.child.append(rr)\n",
+    "                        return self.root, None\n",
+    "                if len(node.keys)>=self.m:\n",
+    "                    return node, node.keys[(self.m//2)]\n",
+    "            return node, None\n",
     "            \n",
-    "            if len(node.keys) >= self.m : # 오버플로 발생?\n",
-    "                return node, node.keys[(self.m//2)]\n",
-    "            else:# Child Overflow X \n",
-    "                return node , None\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "            #     # Parent로 올라가\n",
+    "            #     temp=node.keys[pos:]\n",
+    "            #     node.keys[pos+1:] = temp\n",
+    "            #     # node.keys[pos] = node.child.keys[child_mid_kv]\n",
+    "            #     node.keys[pos] = child_mid_kv\n",
+    "            #     node.child[pos+2:] = node.child[pos+1:]\n",
+    "                \n",
+    "            #     # child split\n",
+    "            #     c_node=node.child[pos]\n",
+    "            #     temp = Node(c_node.isleaf) # 오른쪽으로 추가될 노드\n",
+    "            #     temp.keys = c_node.keys[self.m//2+1:] ## m//2는 부모로 올라갔으므로\n",
+    "            #     c_node.keys=c_node.keys[:self.m//2]\n",
+    "                \n",
+    "            #     ## Child 의 child까지 정리\n",
+    "            #     node.child[pos+1] = temp\n",
+    "            #     if not c_node.isleaf:\n",
+    "            #         temp.child = c_node.child[self.m//2+1:]\n",
+    "            #         c_node.child = c_node.child[:self.m//2+1]\n",
+    "            \n",
+    "            # if len(node.keys) >= self.m : # 오버플로 발생?\n",
+    "            #     print('overflow check')\n",
+    "            #     return node, node.keys[(self.m//2)]\n",
+    "            # else:# Child Overflow X \n",
+    "            #     return node , None\n",
     "            \n",
     "            # 자기자신 OverFlow?\n",
     "            # if len(node.keys) == self.m:\n",
@@ -148,46 +239,87 @@
     "\n",
     "# if __name__==\"__main__\":\n",
     "print(\"Start\")\n",
-    "bt = BTree(3)\n",
-    "kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n",
-    "# for i in random.shuffle([i for i in range(10)]): \n",
+    "# kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n",
     "\n",
-    "# rand=random.randint(1,50)\n",
-    "# for i in kvs:\n",
-    "#     bt.insert_node(bt.root,i)\n",
-    "# bt.printTree(bt.root)\n",
-    "bt.insert_node(bt.root,[1,11])\n",
-    "bt.insert_node(bt.root,[2,11])\n",
-    "bt.insert_node(bt.root,[3,11])\n",
-    "bt.insert_node(bt.root,[4,11])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 11], [2, 11], [3, 11]]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "bt = BTree(3)\n",
+    "bt.insert_node(bt.root,[10,11])\n",
+    "bt.insert_node(bt.root,[15,11])\n",
+    "bt.insert_node(bt.root,[18,11])\n",
+    "bt.insert_node(bt.root,[30,11])\n",
+    "bt.insert_node(bt.root,[20,11])  \n",
+    "bt.insert_node(bt.root,[40,11])\n",
+    "bt.insert_node(bt.root,[50,11])\n",
+    "bt.insert_node(bt.root,[60,11])\n",
+    "bt.insert_node(bt.root,[70,11])\n",
+    "bt.insert_node(bt.root,[80,11])\n",
+    "bt.insert_node(bt.root,[90,11])\n",
+    "bt.insert_node(bt.root,[85,11])\n",
+    "bt.insert_node(bt.root,[75,11])\n",
+    "bt.insert_node(bt.root,[77,11])\n",
     "bt.root"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 232,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(k:[[20, 11], [60, 11]],\n",
+       " '---',\n",
+       " [k:[[15, 11]], k:[[40, 11]], k:[[75, 11], [80, 11]]])"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bt.root,'---', bt.root.child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([k:[[10, 11]], k:[[18, 11]]], [k:[[30, 11]], k:[[50, 11]]])"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bt.root.child[0].child , bt.root.child[1].child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# bt.root.child[0].child[1].child"
+   ]
   }
  ],
  "metadata": {
