--- a/HJ/Algorithm/btree/Btree.ipynb
+++ b/HJ/Algorithm/btree/Btree.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,55 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start\n",
-      "[10, 11]  Node :  k:[] 0\n",
-      "[15, 11]  Node :  k:[[10, 11]] 1\n",
-      "[18, 11]  Node :  k:[[10, 11], [15, 11]] 2\n",
-      "[30, 11]  Node :  k:[[15, 11]] 1\n",
-      "[30, 11]  Node :  k:[[18, 11]] 1\n",
-      "[20, 11]  Node :  k:[[15, 11]] 1\n",
-      "[20, 11]  Node :  k:[[18, 11], [30, 11]] 1\n",
-      "[40, 11]  Node :  k:[[15, 11], [20, 11]] 2\n",
-      "[40, 11]  Node :  k:[[30, 11]] 1\n",
-      "[50, 11]  Node :  k:[[15, 11], [20, 11]] 2\n",
-      "[50, 11]  Node :  k:[[30, 11], [40, 11]] 2\n",
-      "[60, 11]  Node :  k:[[20, 11]] 1\n",
-      "[60, 11]  Node :  k:[[40, 11]] 1\n",
-      "[60, 11]  Node :  k:[[50, 11]] 1\n",
-      "[70, 11]  Node :  k:[[20, 11]] 1\n",
-      "[70, 11]  Node :  k:[[40, 11]] 1\n",
-      "[70, 11]  Node :  k:[[50, 11], [60, 11]] 2\n",
-      "[80, 11]  Node :  k:[[20, 11]] 1\n",
-      "[80, 11]  Node :  k:[[40, 11], [60, 11]] 2\n",
-      "[80, 11]  Node :  k:[[70, 11]] 1\n",
-      "[90, 11]  Node :  k:[[20, 11]] 1\n",
-      "[90, 11]  Node :  k:[[40, 11], [60, 11]] 2\n",
-      "[90, 11]  Node :  k:[[70, 11], [80, 11]] 2\n",
-      "[85, 11]  Node :  k:[[20, 11], [60, 11]] 2\n",
-      "[85, 11]  Node :  k:[[80, 11]] 1\n",
-      "[85, 11]  Node :  k:[[90, 11]] 0\n",
-      "[75, 11]  Node :  k:[[20, 11], [60, 11]] 2\n",
-      "[75, 11]  Node :  k:[[80, 11]] 0\n",
-      "[75, 11]  Node :  k:[[70, 11]] 1\n",
-      "[77, 11]  Node :  k:[[20, 11], [60, 11]] 2\n",
-      "[77, 11]  Node :  k:[[80, 11]] 0\n",
-      "[77, 11]  Node :  k:[[70, 11], [75, 11]] 2\n"
+      "Start\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "k:[[20, 11], [60, 11]]"
+       "k:[[20, 20], [60, 66]]"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,9 +93,6 @@
     "        if len(node.child)>0:\n",
     "            for i in node.child: \n",
     "                self.printTree(i, level)\n",
-    "        \n",
-    "    def splitNode(self,p_pos,p_node,node):\n",
-    "        pass\n",
     "\n",
     "    # k : Key \n",
     "    # def insert_node(self,p_pos,p_node,node,key):\n",
@@ -147,7 +112,7 @@
     "                return node, None \n",
     "            elif key[0]<node.keys[pos][0]: break\n",
     "            pos+=1\n",
-    "        print(key,\" Node : \",node , pos)\n",
+    "        # print(key,\" Node : \",node , pos)\n",
     "        \n",
     "        # Position 찾기 완료\n",
     "        if node.isleaf==True : # Leaf라면?? -> Leaf에서의 삽입 로직\n",
@@ -199,69 +164,79 @@
     "                if len(node.keys)>=self.m:\n",
     "                    return node, node.keys[(self.m//2)]\n",
     "            return node, None\n",
-    "            \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "            #     # Parent로 올라가\n",
-    "            #     temp=node.keys[pos:]\n",
-    "            #     node.keys[pos+1:] = temp\n",
-    "            #     # node.keys[pos] = node.child.keys[child_mid_kv]\n",
-    "            #     node.keys[pos] = child_mid_kv\n",
-    "            #     node.child[pos+2:] = node.child[pos+1:]\n",
     "                \n",
-    "            #     # child split\n",
-    "            #     c_node=node.child[pos]\n",
-    "            #     temp = Node(c_node.isleaf) # 오른쪽으로 추가될 노드\n",
-    "            #     temp.keys = c_node.keys[self.m//2+1:] ## m//2는 부모로 올라갔으므로\n",
-    "            #     c_node.keys=c_node.keys[:self.m//2]\n",
-    "                \n",
-    "            #     ## Child 의 child까지 정리\n",
-    "            #     node.child[pos+1] = temp\n",
-    "            #     if not c_node.isleaf:\n",
-    "            #         temp.child = c_node.child[self.m//2+1:]\n",
-    "            #         c_node.child = c_node.child[:self.m//2+1]\n",
-    "            \n",
-    "            # if len(node.keys) >= self.m : # 오버플로 발생?\n",
-    "            #     print('overflow check')\n",
-    "            #     return node, node.keys[(self.m//2)]\n",
-    "            # else:# Child Overflow X \n",
-    "            #     return node , None\n",
-    "            \n",
-    "            # 자기자신 OverFlow?\n",
-    "            # if len(node.keys) == self.m:\n",
-    "            #     node = splitNode(p_pos,p_node,node)\n",
-    "                \n",
-    "                \n",
+    "    def search_key(self,node,key):\n",
+    "        # print(node)\n",
+    "        pos=0\n",
+    "        while pos < len(node.keys):\n",
+    "            if key[0] == node.keys[pos][0]:\n",
+    "                print(f'Find! key : {node.keys[pos]}')\n",
+    "                return node, key\n",
+    "            elif key[0] < node.keys[pos][0] : break\n",
+    "            else:\n",
+    "                pos+=1\n",
+    "        print(node, pos)1\n",
+    "        if node.child:\n",
+    "            return self.search_key(node.child[pos],key)\n",
+    "        else : return f\"NOT FOUND {key}\"\n",
     "\n",
-    "        \n",
+    "    def print_tree(self,node):\n",
+    "        pass\n",
+    "\n",
     "\n",
     "# if __name__==\"__main__\":\n",
     "print(\"Start\")\n",
     "# kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n",
     "\n",
     "bt = BTree(3)\n",
-    "bt.insert_node(bt.root,[10,11])\n",
-    "bt.insert_node(bt.root,[15,11])\n",
-    "bt.insert_node(bt.root,[18,11])\n",
-    "bt.insert_node(bt.root,[30,11])\n",
-    "bt.insert_node(bt.root,[20,11])  \n",
-    "bt.insert_node(bt.root,[40,11])\n",
-    "bt.insert_node(bt.root,[50,11])\n",
-    "bt.insert_node(bt.root,[60,11])\n",
-    "bt.insert_node(bt.root,[70,11])\n",
-    "bt.insert_node(bt.root,[80,11])\n",
-    "bt.insert_node(bt.root,[90,11])\n",
-    "bt.insert_node(bt.root,[85,11])\n",
-    "bt.insert_node(bt.root,[75,11])\n",
-    "bt.insert_node(bt.root,[77,11])\n",
+    "bt.insert_node(bt.root,[10,10])\n",
+    "bt.insert_node(bt.root,[15,15])\n",
+    "bt.insert_node(bt.root,[18,18])\n",
+    "bt.insert_node(bt.root,[30,30])\n",
+    "bt.insert_node(bt.root,[20,20])  \n",
+    "bt.insert_node(bt.root,[40,40])\n",
+    "bt.insert_node(bt.root,[50,55])\n",
+    "bt.insert_node(bt.root,[60,66])\n",
+    "bt.insert_node(bt.root,[70,77])\n",
+    "bt.insert_node(bt.root,[80,88])\n",
+    "bt.insert_node(bt.root,[90,99])\n",
+    "bt.insert_node(bt.root,[85,85])\n",
+    "bt.insert_node(bt.root,[75,75])\n",
+    "bt.insert_node(bt.root,[77,77])\n",
     "bt.root"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k:[[20, 20], [60, 66]] 1\n",
+      "Find! key : [40, 40]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(k:[[40, 40]], [40, None])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bt.search_key(bt.root, [40,None])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +247,7 @@
        " [k:[[15, 11]], k:[[40, 11]], k:[[75, 11], [80, 11]]])"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,22 +278,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicates key [50, 11]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[]"
+       "(k:[[20, 11], [60, 11]], None)"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# bt.root.child[0].child[1].child"
+    "bt.insert_node(bt.root,[50,11])"
    ]
   }
  ],
